--- a/SpaceShooter/SpaceShooter.csproj
+++ b/SpaceShooter/SpaceShooter.csproj
@@ -59,6 +59,9 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="images\asteroid1.png" />
+    <Content Include="images\asteroid2.png" />
+    <Content Include="images\asteroid3.png" />
     <Content Include="images\cloud.png" />
     <Content Include="images\island.png" />
     <Content Include="images\ocean.gif" />
