--- a/SpaceShooter/SpaceShooter.csproj
+++ b/SpaceShooter/SpaceShooter.csproj
@@ -59,6 +59,9 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\explosion.png" />
+    <Content Include="Assets\images.png" />
+    <Content Include="Assets\thruster.png" />
     <Content Include="images\asteroid1.png" />
     <Content Include="images\asteroid2.png" />
     <Content Include="images\asteroid3.png" />
@@ -74,6 +77,9 @@
     <Content Include="sounds\yay.ogg" />
     <Content Include="sounds\engine.ogg" />
     <Content Include="sounds\thunder.ogg" />
+    <Content Include="Assets\images.json" />
+    <Content Include="Assets\thruster.json" />
+    <Content Include="Assets\explosion.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
